--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -7,14 +7,15 @@
 
 {% block content %}
 <div class="col-lg-7">
+    {% if form.errors %}
     <div class="alert alert-warning alert-dismissible fade show" role="alert"
          style="margin-top: 50px;">
-        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-        {{ form.errors }}
+        {{ form.errors|escape }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    {% endif %}
     <div class="card shadow-lg border-0 rounded-lg mt-5">
         <div class="card-header"><h3 class="text-center font-weight-light my-4">Создать аккаунт</h3>
         </div>
@@ -72,15 +73,6 @@
                         <div class="form-group">
                             <label class="small mb-1" for="{{ form.city.id_for_label }}">Город</label>
                             {{ form.city }}
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label class="small mb-1" for="{{ form.avatar.id_for_label }}">Аватар</label>
-                            {{ form.avatar }}
                         </div>
                     </div>
                 </div>
