Lesson5_HW 3-7 tasks basket

--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -24,7 +24,6 @@
         <!-- /.col-lg-3 -->
 
         <div class="col-lg-9">
-
             <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -54,7 +53,6 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-
             <div class="row">
                 {% for product in products %}
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -72,7 +70,11 @@
                             <p class="card-text">{{ product.description }}</p>
                         </div>
                         <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                            <a href="{% url 'basketapp:basket_add' product.pk %}">
+                                <button type="button" class="btn btn-outline-success">
+                                    Отправить в корзину
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
