--- a/mainapp/templates/mainapp/product_list.html
+++ b/mainapp/templates/mainapp/product_list.html
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="row">
-                {% for product in products %}
+                {% for product in page_obj %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="#">
@@ -83,16 +83,16 @@
 
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    {% if products.paginator.num_pages > 1 %}
-                    <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                    {% if page_obj.paginator.num_pages > 1 %}
+                    <li class="page-item {% if not page_obj.has_previous %} disabled {% endif %}">
                         <a class="page-link"
-                           href="{% if products.has_previous %} {% url 'mainapp:page' products.previous_page_number %} {% else %} # {% endif %}"
+                           href="{% if page_obj.has_previous %} {% url 'mainapp:page' page_obj.previous_page_number %} {% else %} # {% endif %}"
                            tabindex="-1" aria-disabled="true">
                             Previous
                         </a>
                     </li>
                     {% endif %}
-                    {% for page in products.paginator.page_range %}
+                    {% for page in page_obj.paginator.page_range %}
                     <li class="page-item">
                         <a class="page-link"
                            href="{% url 'mainapp:page' page %}">
@@ -100,10 +100,10 @@
                         </a>
                     </li>
                     {% endfor %}
-                    <li class="page-item {% if not products.has_next %} disabled {% endif %}">
-                        {% if products.paginator.num_pages > 1 %}
+                    <li class="page-item {% if not page_obj.has_next %} disabled {% endif %}">
+                        {% if page_obj.paginator.num_pages > 1 %}
                         <a class="page-link"
-                           href="{% if products.has_next%} {% url 'mainapp:page' products.next_page_number %} {% else %} # {% endif %}">
+                           href="{% if page_obj.has_next%} {% url 'mainapp:page' page_obj.next_page_number %} {% else %} # {% endif %}">
                             Next
                         </a>
                         {% endif %}
