--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="col-lg-5">
-    {% if messages or login_form.non_field_errors %}
+    {% if messages or form.non_field_errors %}
     <div class="alert
              {% if messages %} alert-success {% else %} alert-warning {% endif %}
              alert-dismissible fade show" role="alert"
@@ -17,7 +17,7 @@
         {{ message }}
         {% endfor %}
         {% else %}
-        {% for error in login_form.non_field_errors %}
+        {% for error in form.non_field_errors %}
         {{ error }}
         {% endfor %}
         {% endif %}
@@ -33,12 +33,12 @@
             <form method="post" action="{% url 'authapp:login' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label class="small mb-1" for="{{ login_form.username.id_for_label }}">Имя пользователя</label>
-                    {{ login_form.username }}
+                    <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
+                    {{ form.username }}
                 </div>
                 <div class="form-group">
-                    <label class="small mb-1" for="{{ login_form.password.id_for_label }}">Пароль</label>
-                    {{ login_form.password }}
+                    <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
+                    {{ form.password }}
                 </div>
                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="#">Забыли пароль?</a>
