--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -40,7 +40,7 @@
                      src="{% if user.avatar %} {{ user.avatar.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
                      class="img-thumbnail">
             </div>
-            <form action="{% url 'authapp:profile' %}" method="post" enctype="multipart/form-data">
+            <form action="{% url 'authapp:profile' user.pk %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="col-lg-6">
