--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -40,7 +40,7 @@
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'authapp:profile' %}">{{ user.username }}
+                    <a class="nav-link" href="{% url 'authapp:profile' user.pk %}">{{ user.username }}
                         <i class="fas fa-user-circle"></i>
                     </a>
                 </li>
