--- a/adminapp/templates/adminapp/admin-categories-update-delete.html
+++ b/adminapp/templates/adminapp/admin-categories-update-delete.html
@@ -29,8 +29,10 @@
     </form>
     <div class="row">
         <div class="col-lg-12" style="margin-top: 33px;">
-            <a href="{% url 'admin_staff:admin_categories_remove' selected_category.id %}"
-               class="btn btn-danger btn-block">Удалить</a>
+            <form action="{% url 'admin_staff:admin_categories_remove' selected_category.id %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Удалить" class="btn btn-danger btn-block">
+            </form>
         </div>
     </div>
 </div>
