--- a/adminapp/templates/adminapp/admin-products-update-delete.html
+++ b/adminapp/templates/adminapp/admin-products-update-delete.html
@@ -1,7 +1,7 @@
 {% extends 'adminapp/base.html' %}
 
 {% block content %}
-<h1 class="mt-4">Редактирование пользователя | {{ selected_product.name }}</h1>
+<h1 class="mt-4">Редактирование продукта | {{ selected_product.name }}</h1>
 <div class="card-body">
     <form action="{% url 'admin_staff:admin_products_update' selected_product.id %}" method="post"
           enctype="multipart/form-data">
@@ -45,11 +45,11 @@
             </div>
         </div>
     </form>
-    <div class="row">
-        <div class="col-lg-12" style="margin-top: 33px;">
-            <a href="{% url 'admin_staff:admin_products_remove' selected_product.id %}"
-               class="btn btn-danger btn-block">Удалить</a>
-        </div>
+    <div class="col-lg-12" style="margin-top: 33px;">
+        <form action="{% url 'admin_staff:admin_products_remove' selected_product.id %}" method="post">
+            {% csrf_token %}
+            <input type="submit" value="Удалить" class="btn btn-danger btn-block">
+        </form>
     </div>
 </div>
 {% endblock %}
